Criação do chart.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+
   assets:
-   - assets\imagens\waiting.png
+    - assets/imagens/waiting.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -61,14 +62,14 @@ flutter:
   fonts:
     - family: Quicksand
       fonts:
-        - asset: assets/fonts/Quicksand-Regular.ttf
-        - asset: assets/fonts/Quicksand-Bold.ttf
-        - weight: 700
+        - asset: assets\fonts\Quicksand-Regular.ttf
+        - asset: assets\fonts\Quicksand-Bold.ttf
+          weight: 700
     - family: OpenSans
       fonts:
-        - asset: assets/fonts/OpenSans-Regular.ttf
-        - asset: assets/fonts/OpenSans-Bold.ttf
-        -  weight: 700
+        - asset: assets\fonts\OpenSans-Regular.ttf
+        - asset: assets\fonts\OpenSans-Bold.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
